examples/test/testpolicy10676.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10676
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key18: value1
      key26: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value21
          key33: value18
      podSelector:
        matchLabels:
          key17: value1
